--- a/front-end/src/app/core/column-list/column-list.component.html
+++ b/front-end/src/app/core/column-list/column-list.component.html
@@ -95,7 +95,7 @@
                     </mat-menu>
     </nav>
 
-    <button style="margin-top: 100px;margin-left: 50px;" class="btn btn-light" mat-button [matMenuTriggerFor]="labelmenu">Tìm thẻ theo nhãn</button>
+    <button style="margin-top: 100px;margin-left: 25px;" class="btn btn-light" mat-button [matMenuTriggerFor]="labelmenu">Tìm thẻ theo nhãn</button>
     <!-- #enddocregion mat-menu-trigger-for -->
     <mat-menu #labelmenu="matMenu">
       <div (click)="loadData()" style="background-color: white;font-family: Helvetica Neue;" class="label-menu">All task</div>
@@ -110,7 +110,7 @@
         <div style="background-color: #1273ac; border: 0px;" cdkDropList cdkDropListGroup cdkDropListOrientation="horizontal" class="my-board" (cdkDropListDropped)="dropColumn($event)">
             <div style="background-color: gainsboro; border-radius: 5px;" class="mt-3 ml-4 shadow p-2 mb-2 example-box" *ngFor="let column of columns" cdkDrag>
                 <div class="title">
-                    <button *ngIf="showInput !== column.column.id" class="btn form-control" style="border: 0px; text-align: left;" (click)="showEditNameInput(column.column.id)"> <b style="font-size: 20px;">{{ column.column.name }}</b> </button>
+                    <button *ngIf="showInput !== column.column.id" class="btn form-control" style="border: 0px; text-align: left;overflow: hidden;" (click)="showEditNameInput(column.column.id)"> <b style="font-size: 20px;">{{ column.column.name }}</b> </button>
                     <form [hidden]="showInput !== column.column.id">
                         <input (keydown.enter)="changeNameList(column.column.id)" type="text" [(ngModel)]="myColumn.name" name="name" class="form-control">
                     </form>
@@ -118,7 +118,7 @@
 
                 <div cdkDropList [cdkDropListData]="column.tasks" class="task-list" (cdkDropListDropped)="dropTask($event,column.column.id,column.column.name)">
                     <div (click)="openCommentDialog(task.id)" style="overflow: hidden;border-radius: 3px; border-left: 10px solid {{ task.label }};" class="my-task mt-2 shadow p-2 mb-2" *ngFor="let task of column.tasks" cdkDrag>
-                        <div style="height: 44px;overflow: hidden;"><p>{{ task.title }}</p></div>
+                        <div style="min-height: 30px;overflow: hidden;"><p>{{ task.title }}</p></div>
                         <div *ngIf="task.users !== []">
                         <div class="member" style="background-image: url({{user.image}});" *ngFor="let user of task.users"
                         title="{{ user.name }} ( {{ user.email }} )"></div>
